classDiagram
    direction TB

    class WorkRuleSeries {
        <<record>>
        WorkRuleSeriesId id
        String name
        Optional~LocalDate~ abolishedOn
        activePeriod() DateRange
    }

    class WorkRule {
        <<record>>
        WorkRuleId id
        WorkRuleSeriesId seriesId
        DateRange validPeriod
        WorkingTimeSystem workingTimeSystem
        Duration statutoryDailyWorkingTime
        Duration statutoryWeeklyWorkingTime
        NightWindow nightWindow
        PremiumRates premiumRates
    }

    class WorkingTimeSystem {
        <<sealed interface>>
    }
    class FixedTimeSystem {
        <<record>>
        LocalTime scheduledStart
        LocalTime scheduledEnd
        Duration scheduledBreak
        scheduledWorkingTime() Duration
    }
    class FlextimeSystem {
        <<record>>
        TimeOfDayRange flexibleTime
        TimeOfDayRange coreTime
        Duration standardDailyWorkingTime
        flexibleMorning() Optional~TimeOfDayRange~
        flexibleEvening() Optional~TimeOfDayRange~
        scheduledTotalWorkingTime(int) Duration
    }

    class PremiumRates {
        <<record>>
        BigDecimal overtimeBeyondStatutory
        BigDecimal night
        BigDecimal legalHoliday
        multiplierFor(Set~PremiumType~) BigDecimal
    }
    class NightWindow {
        <<enum>>
        STANDARD
        DESIGNATED_AREA
        crossesMidnight() boolean
        intervalsOverlapping(TimeRange) List~TimeRange~
    }
    class DayType {
        <<enum>>
        WORKDAY
        LEGAL_HOLIDAY
        NON_LEGAL_HOLIDAY
    }
    class CompanyCalendar {
        <<interface>>
        dayTypeOf(LocalDate) DayType
        workdayCountIn(DateRange) int
    }
    class SettlementPeriod {
        <<record>>
        YearMonth month
        DateRange period
        of(YearMonth, DateRange) Optional~SettlementPeriod~
        days() long
        statutoryTotalLimit(Duration) Duration
        checkCapacity(FlextimeSystem, int, Duration) Optional~ScheduleCapacityWarning~
    }
    class ScheduleCapacityWarning {
        <<record>>
        YearMonth month
        Duration scheduled
        Duration limit
        excess() Duration
    }
    class EffectiveWorkRule {
        <<domain service>>
        resolve(EmployeeId, List~WorkRuleAssignment~, List~WorkRule~, LocalDate) Optional~WorkRule~
    }
    class WorkRuleAssignment {
        <<record>>
        EmployeeId employeeId
        WorkRuleSeriesId seriesId
        DateRange period
    }
    class PremiumType {
        <<enum · shared>>
        OVERTIME_WITHIN_STATUTORY
        OVERTIME_BEYOND_STATUTORY
        NIGHT
        LEGAL_HOLIDAY
    }
    class MonthClosureQuery {
        <<port · shared>>
        isClosed(EmployeeId, YearMonth) boolean
        acceptsChanges(EmployeeId, YearMonth) boolean
    }

    WorkingTimeSystem <|.. FixedTimeSystem
    WorkingTimeSystem <|.. FlextimeSystem
    WorkRuleSeries "1" --> "*" WorkRule : 版
    WorkRule --> WorkingTimeSystem
    WorkRule --> PremiumRates
    WorkRule --> NightWindow
    PremiumRates ..> PremiumType
    CompanyCalendar --> DayType
    WorkRuleAssignment --> WorkRuleSeries : 系列を指す
    SettlementPeriod ..> ScheduleCapacityWarning : 総枠超過を知らせる
    SettlementPeriod ..> FlextimeSystem
    EffectiveWorkRule ..> WorkRuleAssignment
    EffectiveWorkRule ..> WorkRule : 時点解決
